Add student score, student bill & tương thích cốt của Đuông Dừa